# silly.corp

./: BUILD.bazel  Cargo.toml  MODULE.bazel  go.mod  package.json  pyproject.toml
go/: BUILD.bazel  Cargo.toml
go/src/: main.rs
requirements/: all.txt
tools/: BUILD.bazel
