[package]
name = "go"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
heed = "0.20.0"
byteorder = "1.5.0"
tower-http = { version = "0.6.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
